# campaign_narrator

./: .env.example  .env.openai.example  .env.secrets.example  .gitignore  Dockerfile  Makefile  README.md  SYSTEM_ARCHITECTURE.md  TODO_proper_testing.py  docker-compose.acceptance.yml  docker-compose.local.yml  pyproject.toml
app/campaignnarrator/: __init__.py  application_factory.py  cli.py  logging_config.py  orchestrator.py  settings.py  terminal_io.py
control/: narrator.py
data/character_templates/: fighter.json  rogue.json
data/metadata/: enums.json
data/narrative/: campaign.json  session_zero.json
data/schema/: aberrations.schema.json  adventuring_gear.schema.json  armor.schema.json  beasts.schema.json  campaign.schema.json  campaign_state.schema.json  celestials.schema.json  class_features.schema.json  class_progression.schema.json  class_spell_lists.schema.json  classes.schema.json  common_magic_items.schema.json  constructs.schema.json  dragons.schema.json  elementals.schema.json  enums.schema.json  event_log_entry.schema.json  factions.schema.json  feats.schema.json  fey.schema.json  fiends.schema.json  giants.schema.json  humanoids.schema.json  invocations.schema.json  locations.schema.json  monstrosities.schema.json  npcs.schema.json  oozes.schema.json  origins.schema.json  plants.schema.json  player_character.schema.json  quests.schema.json  rare_magic_items.schema.json  rule_index.schema.json  session_summary_entry.schema.json  session_zero.schema.json  species.schema.json  spell_effects.schema.json  (+13 more)
tests/: __init__.py  conftest.py
(+619 files in other folders)
