[project]
name = "campaignnarrator"
version = "0.1.0"
description = ""
authors = [
    {name = "adammartin",email = "yance.martin@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "multi-dice (>=1.0.1,<2.0.0)",
    "pydantic-ai-slim[openai] (>=1.80.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-sugar (>=1.1.1,<2.0.0)",
    "ruff (>=0.15.10,<0.16.0)",
    "pdftotext (>=3.0.0,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "campaignnarrator", from = "app" }
]

[project.scripts]
campaignnarrator = "campaignnarrator.cli:main"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "PL", "I", "FAST", "ASYNC", "B", "INP", "PT", "Q", "SIM", "C90", "FURB", "RUF", "TRY"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S"]
